--- a/pola.html
+++ b/pola.html
@@ -16,7 +16,7 @@
     <P>Kere mama</P>
     <p>halar po hala</p>
     <img src="WhatsApp Image 2023-03-08 at 2.32.43 PM.jpeg">
-    <p>bapre bapre</p>
+    <p class="ore">bapre bapre</p>
     
 </body>
 </html>
